--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "with-context",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Decorator for new React Context API",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/SunHuawei/with-context#readme",
   "peerDependencies": {
-    "react": "^16.3.0.alpha"
+    "react": "^18.2.0"
   }
 }
